sumo/tests/sumo/extended/wauts/errors/wauts/cross3ltl_error_missing_wautid/errors.sumo
Error: Missing id of a 'waut'-object.
Quitting (on error).
